@@ -6,7 +6,7 @@ import java.util.Arrays;
 // BEGIN
 class App {
     public static long getCountOfFreeEmails(List<String> emailList) {
-        List<String> freeDomains = List.of("gmail.com","yandex.ru","hotmail.com");
+        final List<String> freeDomains = Arrays.asList("gmail.com", "yandex.ru", "hotmail.com");
 
         return emailList.stream()
             .map(email -> email.split("@")[1])
